kubernetes/apps/external-secrets/onepassword/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/CiliumProject/cilium/main/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: onepassword
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: onepassword
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: external-secrets
            io.kubernetes.pod.namespace: external-secrets
  egress:
    - toEntities:
        - kube-apiserver
    - toFQDNs:
        - matchPattern: "*.1password.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
